Bug 158155 - Plasma crashes giving just a white screen as result
Summary: Plasma crashes giving just a white screen as result
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-21 12:34 UTC by Luigi Conversini
Modified: 2008-02-23 15:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luigi Conversini 2008-02-21 12:34:47 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

After turning off the external usb hard disk plasma crashes and the screen turns white. Must restart X to come back to the desktop.

Notebook: Asus
Video: Nvidia
Distr: Kubuntu 7.10
KDE: 4.0.62 (svn compiled)
Comment 1 Luigi Conversini 2008-02-21 14:27:48 UTC
The crash can be resolved with Alt+F2 and run Plasma without restarting X
Comment 2 FiNeX 2008-02-21 23:14:43 UTC
Can you provide a backtrace of the crash?
Comment 3 Aaron J. Seigo 2008-02-22 00:35:16 UTC
this will certainly be the Solid multiple deletion crash. Kevin?
Comment 4 Luigi Conversini 2008-02-22 03:16:57 UTC
Sorry I can not. I got no "backtrace message".
Tell me the way I can Help you, with log may be...
Comment 5 Kevin Ottens 2008-02-23 15:31:42 UTC
SVN commit 778375 by ervin:

QExplictlySharedDataPointer behavior slightly changed in Qt 4.4.
So let's modify the trick I use to tweak the reference counting
when a DevicePrivate instance still has DeviceInterface instances
in its cache.

BUG: 158155
BUG: 158257




 M  +11 -13    device.cpp  
 M  +0 -1      device_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=778375