QExplictlySharedDataPointer behavior slightly changed in Qt 4.4. So let's modify the trick I use to tweak the reference counting when a DevicePrivate instance still has DeviceInterface instances in its cache.

BUG: 158155
BUG: 158257



svn path=/trunk/KDE/kdelibs/; revision=778375