solid/solid/device_p.h
@@ -53,7 +53,6 @@ namespace Solid
         QString m_udi;
         QPointer<Ifaces::Device> m_backendObject;
         QMap<DeviceInterface::Type, DeviceInterface *> m_ifaces;
-        QExplicitlySharedDataPointer<DevicePrivate> m_refToSelf;
     };
 }
 
